# plume-plugin-axe

./: .gitignore  CMakeLists.txt  README.md
.github/: ci-config.yml  ci-hpc-config.yml
.github/workflows/: ci.yml
config/: CMakeLists.txt  plume-config-t21.json  plume-config-t21.json.in  plume-config.json.in
config/dev/: CMakeLists.txt  plume-config-t21.json.in
plugin/: CMakeLists.txt  area.cc  area.h  area_extractor.cc  area_extractor.h  covjson_template.h  data_reader.cc  data_reader.h  data_writer.cc  data_writer.h  data_writer_csv.cc  data_writer_csv.h  data_writer_json.cc  data_writer_json.h  data_writer_nc.cc  data_writer_nc.h  extracted_data.cc  extracted_data.h  field_reader.cc  field_reader.h  plugin_config.cc  plugin_config.h  plugin_types.h  plugin_utils.cc  plugin_utils.h  user_request.cc  user_request.h
plugin/scripts/: collect_area_data.py  covjson_template.py  data_aggregator.py  plot_wt.py
plugin/tests/: test_area.cc  test_config.cc  test_reader.cc  test_request.cc
src/: CMakeLists.txt
src/configs/: CMakeLists.txt  plume-config-t21.json.in  plume-config.json.in
src/configs/dev/: plume-config-t21.json.in  plume-config.json.in
src/experimental/scripts/: build_env.sh  collect_area_data.py  covjson_template.py  data_aggregator.py
src/plume-plugin-axe/: CMakeLists.txt  area.h  area_extractor.cc  area_extractor.h  covjson_template.h  data_reader.cc  data_writer.cc  data_writer.h  data_writer_csv.cc  data_writer_json.cc  data_writer_nc.cc  extracted_data.cc  extracted_data.h  plugin_config.h  plugin_types.h  plugin_utils.cc  plugin_utils.h  user_request.cc  user_request.h
tests/: CMakeLists.txt  test_area.cc  test_config.cc  test_reader.cc  test_request.cc
